--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
     font-family: Inter;
 }
 
+/* PRE */
+
 .star {
     height: 30px;
     width: 30px;
@@ -118,4 +120,141 @@ button.button-danger {
 
 .box.filled {
     background-color: blue;
+}
+
+/* BADGES */
+
+.badge {
+    display: inline-block;
+    padding: 0.143em 0.857em;
+    font-size: 0.875em;
+    font-weight: 500;
+    color: #1F2937;
+    background-color: #F3F4F6;
+    border-radius: 4px;
+
+}
+
+.badge-pill {
+    border-radius: 12px;
+    /* transition: background-color 0.3s ease-in-out; */
+}
+
+div.badge-red {
+    color: #991B1B;
+    background-color: #FEE2E2; /* Red */
+}
+
+div.badge-green {
+    color: #065F46;
+    background-color: #D1FAE5; /* Green */
+}
+
+div.badge-blue {
+    color: #1E40AF;
+    background-color: #DBEAFE; /* Blue */
+}
+
+div.badge-yellow {
+    color: #92400E;
+    background-color: #FEF3C7; /* Yellow */
+}
+
+div.badge-indigo {
+    color: #3730A3;
+    background-color: #E0E7FF; /* Indigo */
+}
+
+div.badge-purple {
+    color: #5B21B6;
+    background-color: #EDE9FE; /* Purple */
+}
+
+div.badge-pink {
+    color: #9D174D;
+    background-color: #FCE7F3; /* Pink */
+}
+
+/* Banners */
+
+.banner h1, .banner p {
+    margin: 0;
+}
+
+.banner {
+    padding: 10px;
+    border-radius: 6px;
+    display: flex;
+    gap: .5em;
+    font-size: 0.875rem;
+}
+
+.banner-single {
+    align-items: center;
+}
+
+.banner-multi {
+    align-items: start;
+}
+
+.banner-success {
+    color: #047857;
+    background-color: #ECFDF5;
+}
+ 
+.banner-warning {
+    color: #FBBF24;
+    background-color: #FFFBEB;
+}
+ 
+.banner-error {
+    color: #F87171;
+    background-color: #FEF2F2;
+}
+
+.banner-neutral {
+    color: #1E40AF;
+    background-color: #EFF6FF;
+}
+
+.banner-icon-success {
+    color: #34D399;
+}
+
+.banner-icon-warning {
+    color: #FBBF24;
+}
+
+.banner-icon-error {
+    color: #F87171;
+}
+
+.banner-icon-neutral {
+    color: #60A5FA;
+}
+
+.banner h1 {
+    margin: 0;
+    font-weight: 500;
+    font-size: 0.875rem;
+}
+
+.banner-heading-success {
+    color: #065F46;
+}
+
+.banner-heading-warning {
+    color: #92400E;
+}
+
+.banner-heading-error {
+    color: #92400E;
+}
+
+.banner-heading-neutral {
+    color: #1E40AF;
+}
+
+.banner p {
+    margin-top: 7px;
 }
