--- a/style.css
+++ b/style.css
@@ -9,6 +9,16 @@ body {
     display: flex;
     justify-content: center;
     font-family: Inter;
+    background-color: grey;
+}
+
+#root {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 /* PRE */
@@ -257,4 +267,51 @@ div.badge-pink {
 
 .banner p {
     margin-top: 7px;
+}
+
+/* Card */
+
+.card {
+    position: relative;
+    background-color: #F9FAFB;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 384px;
+    height: 208px;
+    padding: 32px 24px;
+    border-radius: 8px;
+}
+
+.card-brand {
+    position: absolute;
+    top: -25px;
+    color: #FFFFFF;
+    background-color: #3F75FE;
+    border-radius: 6px;
+    padding: .8em 1em;
+    box-shadow: 0px 10px 15px -3px #0000001A;
+}
+
+.card-icon {
+    font-size: 2rem;
+}
+
+.card-header {
+    color: #111827;
+    font-size: 1.125rem;
+    font-weight: 500;
+}
+
+.card-body {
+    color: #6B7280;
+    font-size: 1rem;
+    font-weight: 400;
+    margin-top: 10px;
+}
+
+.card:hover {
+    box-shadow: 0px 4px 25px 0px #0000001A;
 }
